# hometap-interview

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  manage.py  pyproject.toml
backend/hometap/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  package.json
