[tool.poetry]
name = "hometap-interview"
version = "0.1.0"
description = ""
authors = ["fedefunes96 <fede.funes96@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.7"
djangorestframework = "^3.15.2"
# python-decouple = "^3.8"
# psycopg2-binary = "^2.9.9"
# django-allauth = { extras = ["socialaccount"], version = "^64.0.0" }
# django-cors-headers = "^4.4.0"
# drf-spectacular = "^0.27.2"
# hashids = "^1.3.1"

# praw = "^7.8.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.2"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

[tool.ruff]
line-length = 120
extend-select = ["I"]

[tool.mypy]
strict = true
pretty = true
warn_unused_ignores = true
disable_error_code = 'import-untyped'
mypy_path = "backend"

[tool.pyright]
include = ["backend"]

[tool.djlint]
profile="django"
